# to_do_backend

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
iam/: urls.py
iam/migrations/: 0001_initial.py
iam/user/: filters.py  models.py  serializers.py  views.py
to_do_list/: settings.py  urls.py
todo/: urls.py
todo/filters/: category.py  task.py
todo/migrations/: 0001_initial.py  0002_category_user.py
todo/models/: category.py  task.py
todo/serializers/: category.py  task.py
todo/views/: category.py  task.py
utils/middlewares/: profile_creation.py
utils/mixins/: cms_mixin.py  pk_mixin.py  timestampmixin.py
